[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Images/Background/elevator.jpg" type="Texture" id=1]
[ext_resource path="res://src/Rhythm/Fonts/Brookliness.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Images/Oliver Frames/Oliver Smile.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/Mother Frames/Mother Happy.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/Cosplayer Frames/Cosplay Smile.png" type="Texture" id=5]
[ext_resource path="res://src/Rhythm/Scripts/End.gd" type="Script" id=6]
[ext_resource path="res://assets/Images/Himbo Frames/Himbo Smile.png" type="Texture" id=7]
[ext_resource path="res://assets/Images/Woman Frames/Woman Smile.png" type="Texture" id=8]
[ext_resource path="res://assets/Images/Janitor Frames/Janitor Laugh.png" type="Texture" id=9]
[ext_resource path="res://src/Rhythm/Scripts/EndButton.gd" type="Script" id=10]
[ext_resource path="res://assets/Images/Ominous Frames/Ominous Wink.png" type="Texture" id=11]
[ext_resource path="res://assets/Images/Skater Frames/Skater Wink.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="End" type="Node2D"]
scale = Vector2( 6, 6 )
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.301961, 0.415686, 0.490196, 1 )
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GradeLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 132.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "grade:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GradeNumber" type="Label" parent="."]
margin_left = 100.0
margin_top = 8.0
margin_right = 164.0
margin_bottom = 132.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 24.0
margin_right = 485.0
margin_bottom = 148.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "final score: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumber" type="Label" parent="."]
margin_left = 100.0
margin_top = 24.0
margin_right = 164.0
margin_bottom = 148.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 40.0
margin_right = 435.0
margin_bottom = 164.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "max combo:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboNumber" type="Label" parent="."]
margin_left = 100.0
margin_top = 40.0
margin_right = 164.0
margin_bottom = 164.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreatLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 56.0
margin_right = 265.0
margin_bottom = 180.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "great:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreatNumber" type="Label" parent="."]
margin_left = 100.0
margin_top = 56.0
margin_right = 164.0
margin_bottom = 180.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoodLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 72.0
margin_right = 217.0
margin_bottom = 196.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "good:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoodNumber" type="Label" parent="."]
margin_left = 100.0
margin_top = 72.0
margin_right = 164.0
margin_bottom = 196.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkayLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 88.0
margin_right = 246.0
margin_bottom = 212.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "okay:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkayNumber" type="Label" parent="."]
margin_left = 100.0
margin_top = 88.0
margin_right = 164.0
margin_bottom = 212.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissedLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 104.0
margin_right = 262.0
margin_bottom = 228.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "missed:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissedNumber" type="Label" parent="."]
margin_left = 100.0
margin_top = 104.0
margin_right = 164.0
margin_bottom = 228.0
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassFail" type="Label" parent="."]
margin_left = 135.551
margin_top = 14.8899
margin_right = 743.551
margin_bottom = 255.89
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
text = "Well Done!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 259.646, 97.779 )
scale = Vector2( 0.03, 0.03 )
frames = SubResource( 1 )

[node name="Button" type="Button" parent="."]
modulate = Color( 0.952941, 0.741176, 1, 1 )
margin_left = 105.878
margin_top = 131.114
margin_right = 657.878
margin_bottom = 366.114
rect_scale = Vector2( 0.16, 0.16 )
custom_fonts/font = ExtResource( 2 )
text = "Retry?"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
